<resources>
    <string name="app_name">Wiktionary</string>

    <string name="search_bar">Search Wiktionary</string>
    <string name="button_voice_search">Voice search</string>

    <!-- Navigation drawer actions -->
    <string name="header_button_log_in_join">Log in / join Wiktionary</string>
    <string name="header_button_log_out">Log out</string>

    <string name="action_settings">Settings</string>

    <string name="action_support">Support Wiktionary</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>

    <!-- Bottom navigation view actions -->
    <string name="action_explore">Explore</string>
    <string name="action_my_lists">My lists</string>
    <string name="action_history">History</string>
    <string name="action_nearby">Nearby</string>

    <string name="button_tabs">Show tabs</string>
    <string name="button_more">More options</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_languages">Wiktionary languages</string>
    <string name="pref_description_languages">English</string>

    <string name="pref_title_theme">App theme</string>
    <string name="pref_description_theme">Light</string>

    <!-- Settings for data usage -->
    <string name="pref_header_data_usage">Data usage</string>

    <string name="pref_title_wifi_only">Download only over Wi-Fi</string>

    <!-- About information in Settings -->
    <string name="pref_header_about">About</string>

    <string name="pref_title_about_app">About the Wiktionary app</string>

    <string name="pref_title_privacy_policy">Privacy policy</string>

    <string name="pref_title_terms">Terms of use</string>
</resources>
