<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/actions_operations">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>

    <group android:id="@+id/actions_info">
        <item
            android:id="@+id/action_support"
            android:title="@string/action_support" />
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/action_about" />
        <item
            android:id="@+id/action_help"
            android:icon="@drawable/ic_help"
            android:title="@string/action_help" />
    </group>
</menu>